# self-organising-map

./: Makefile  README.md  kohonen.ipynb  pyproject.toml  requirements.txt
kohonen/: main.py
kohonen/docker/: base.Dockerfile  test.Dockerfile
kohonen/src/: kohonen.py
kohonen/tests/unit/: kohonen_test.py
