[tool.poetry]
name = "self-organising-map"
version = "0.1.0"
description = "App to generate a Self-organising-map"
authors = ["abzeefly <zaid.ansari@finder.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
